crates/bc-cli/tests/cli/snapshots/cli__sync__sync_all_dry_run_over_no_profiles_is_json_clean.snap
---
source: crates/bc-cli/tests/cli/sync.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "dry_run": true,
  "profiles": [],
  "snapshot": null
}
----- stderr -----
