crates/bc-cli/tests/cli/snapshots/cli__sync__sync_all_over_no_profiles_reports_zero_and_exits_zero.snap
---
source: crates/bc-cli/tests/cli/sync.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
profile      txns  attached   skipped  warnings  batch

0 profiles. 0 transactions imported, 0 postings skipped.
----- stderr -----
