crates/bc-cli/tests/cli/snapshots/cli__sync__sync_missing_profile_returns_error.snap
---
source: crates/bc-cli/tests/cli/sync.rs
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: not found: import profile 'nonexistent'
